--- a/Problem5.yaml
+++ b/Problem5.yaml
@@ -1,3 +1,8 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+   name: problem5
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -19,18 +24,12 @@ spec:
         image: nginx
         ports:
         - containerPort: 80  
-        resources:
-          limits:
-            memory: 5Mi
-            cpu: 250m
-          requests:
-            memory: 96Mi
-            cpu: 250m
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: problem-5-service
+  namespace: problem5
 spec:
   selector:
     app: nginx
